fix for vh on mobiles to display properly

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -14,6 +14,8 @@ finalisehtml {
   position: relative;
   width: 100%;
   height: 100vh;
+  /* fallback for vrowsers that dont support calc */
+  height: calc(var(--vh, 1vh) * 100);
   background: url(../img/bg-desk.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
